# dll-hijack

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: lib.rs
src/: lib.rs
